# aiterm

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  TODO.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: build-linux.yml  build-windows.yml  deploy-pages.yml
scripts/: generate-app-icons.sh  generate-licenses.sh  set-dmg-icon.sh
src/: app.css  app.html
src-tauri/: .taurignore  Cargo.toml  Info.plist  about.hbs  about.toml  build.rs  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/claude_code/: CLAUDE.md  lockfile.rs  mod.rs  protocol.rs  server.rs
src-tauri/src/commands/: claude_code.rs  editor.rs  mod.rs  scheduler.rs  ssh_tunnel.rs  system.rs  terminal.rs  window.rs  workspace.rs
src-tauri/src/pty/: manager.rs  mod.rs
src-tauri/src/state/: app_state.rs  mod.rs  persistence.rs  scrollback_db.rs  workspace.rs
src-tauri/src/terminal/: event_proxy.rs  handle.rs  mod.rs  osc.rs  render.rs  search.rs  serialize.rs
src/lib/components/: AgentBridgePicker.svelte  ChangelogModal.svelte  ClaudeIntegrationModal.svelte  ContextMenu.svelte  HelpModal.svelte  Icon.svelte  ImportPreviewModal.svelte  LayoutSelector.svelte  PreferencesModal.svelte  QuickOpen.svelte  ResizableTextarea.svelte  Resizer.svelte  ThemeEditor.svelte  Toast.svelte  Tooltip.svelte
src/lib/stores/: activity.svelte.ts  agentLink.svelte.ts  claudeCode.svelte.ts  claudeState.svelte.ts  editorRegistry.svelte.ts  editorRegistry.ts  navHistory.svelte.ts  notificationDispatch.ts  notifications.svelte.ts  preferences.svelte.ts  resumeGate.svelte.ts  sshDisconnect.svelte.ts  sshMcpBridge.svelte.ts  terminals.svelte.ts  (+4 more)
src/routes/: +layout.svelte  +page.svelte
website/: astro.config.mjs  package-lock.json  package.json
website/.astro/: content-assets.mjs  data-store.json  settings.json
(+50 files in other folders)
