[package]
name = "aiterm"
version = "0.5.0"
description = "A Tauri-based terminal organizer"
authors = ["you"]
edition = "2021"

[lib]
name = "aiterm_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
log = "0.4"
